# Add_Skirt_To_STL_Solution

./: .gitignore  README.md  TaskDescriptionReadme.md
SourceCode/: CMakeLists.txt  Main.cpp
SourceCode/Data/: plane.stl
